--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,20 +1,15 @@
 <style>
     h3{
         text-align: left;
-        /* margin-bottom: 1rem; */
         padding-left: 1rem;
         padding-top: 1rem;
-
     }
     .features{
         display: flex;
-        /* padding: 1rem 2rem 1rem 2rem; */
         justify-content: space-around;
-
     }
     ul{
         list-style: none;
-        /* margin-left: 0; */
         padding-left: 0;
     }
     hr{
@@ -68,9 +63,9 @@
             </ul>
         </div>
         <div class="part1">
-            <p>WanderLust</p>
+            <p>Voyager</p>
             <ul>
-                <li>Newsroon</li>
+                <li>Newsroom</li>
                 <li>New features</li>
                 <li>Careers</li>
                 <li>Investors</li>
